--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Ffriend</string>
     <string name="title_activity_maps">Map</string>
+    <!-- login activity -->
+    <string name="loginEnglishHintEmail"></string>
 </resources>
