map -> bugs fixed profile map -> bio set a default bio for everyone in register activity map -> Cicle color changed user model updated with bio and profile url

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
     <string name="dbUserame">username</string>
     <string name="dbEmail">email</string>
     <string name="dbPhoneNumber">phonenumber</string>
+    <string name="dbLon">lon</string>
+    <string name="dbLat">lat</string>
+    <string name="dbAvatarUrl">avatarurl</string>
+    <string name="dbBio">biography</string>
+    <string name="dbAge">age</string>
 
     <!-- login -->
     <!-- login xml -->
@@ -42,7 +47,5 @@
     <string name="profileGenderFemale"> Female</string>
     <string name="profileDefaultAge">Years old/</string>
     <string name="profileDefaultDescription">        In a library, the word biography refers both to a kind of book and to a section where books of that kind are found. Each biography tells the story of a real person\'s life. A biography may be about someone who lived long ago, recently, or even someone who is still living, though in the last case it must necessarily be incomplete. The term autobiograp</string>
-    <string name="dbLon">lon</string>
-    <string name="dbLat">lat</string>
     <!-- profile activity -->
 </resources>
