--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="englishHintPhoneNumber">Phone number</string>
     <string name="englishHintUsername">Username</string>
     <string name="englishHintAge">Age Example: 21</string>
-    <string name="englishHintBio">Describe your self</string>
+    <string name="englishHintBio">About me</string>
     <string name="englishHintGender">Male/Female</string>
 
     <!-- database key -->
@@ -52,9 +52,10 @@
     <!-- profile -->
     <!-- profile xml -->
     <string name="profileDefaultUsername">Kevin Jason</string>
-    <string name="profileGenderMale"> Male</string>
-    <string name="profileGenderFemale"> Female</string>
-    <string name="profileDefaultAge"> Years old/</string>
+    <string name="profileDefaultAge"> 19</string>
+    <string name="profileGenderMale">Male</string>
+    <string name="profileGenderFemale">Female</string>
+    <string name="profileSeperator">|</string>
     <string name="profileDefaultDescription">        In a library, the word biography refers both to a kind of book and to a section where books of that kind are found. Each biography tells the story of a real person\'s life. A biography may be about someone who lived long ago, recently, or even someone who is still living, though in the last case it must necessarily be incomplete. The term autobiograp</string>
     <string name="profileSetupMessageGenderWrong">Please pick a gender</string>
     <string name="profileSetupMessageInputEmpty">Please fill all inputs</string>
