new chat system fixed some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <!-- profile activity -->
     <string name="startChatException">User that cannot be found!</string>
     <string name="chat_message_chat_view_message">cannot display message</string>
+    <string name="dbSentMessage">sentmessage</string>
 </resources>
