points system implemented, checks if users have met before or if a user is trying to scan their own qr code, updates firebase if not. changed register to give a new user a points field and a users met field.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <!-- profile activity -->
     <string name="startChatException">User that cannot be found!</string>
     <string name="chat_message_chat_view_message">cannot display message</string>
+    <string name="dbPoints">points</string>
+    <string name="dbUsersMet">users met</string>
 </resources>
