change ffriend to ffrind

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- english -->
     <!-- general -->
-    <string name="app_name">Ffriend</string>
+    <string name="app_name">Ffrind</string>
     <string name="title_activity_maps">Map</string>
 
     <!-- edit text hint form -->
